fix: atualizar URI do MongoDB e corrigir URL da API no script.js

--- a/encurtador-url/.env
+++ b/encurtador-url/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb://localhost:27017/encurtador-url
+MONGODB_URI=mongodb+srv://redirectuser:40822742@cluster0.r0cvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
